# hidpp

./: CMakeLists.txt  NOTE.txt  hidpp.code-workspace  list.sh  run.sh
src/libhidpp/: CMakeLists.txt
src/libhidpp/hid/: DeviceMonitor_macos.cpp  DeviceMonitor_windows.cpp  RawDevice_macos.cpp
src/libhidpp/hid/macos/: Utility_macos.cpp  Utility_macos.h  Utility_macos.mm  macOSUtility.cpp  macOSUtility.h
src/libhidpp/hidpp10/: WriteError.h  defs.h
src/libhidpp/hidpp20/: UnsupportedFeature.h
src/tools/: CMakeLists.txt  hidpp10-load-temp-profile.cpp
